# oncue

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
scripts/: notarize.sh
src/: App.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/align/: mod.rs  nw.rs  offset.rs
src-tauri/src/asr/: whisper.rs
src-tauri/src/commands/: mod.rs  models.rs  pipeline.rs  settings.rs  system.rs
src-tauri/src/ffmpeg/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/pipeline/: generate.rs  mod.rs  resync_fast.rs  resync_precise.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/srt/: ass.rs  mod.rs  parse.rs  render.rs
src-tauri/src/translate/: anthropic.rs  chunker.rs  mod.rs  openai.rs
src-tauri/tests/: asr_integration.rs  generate_chunker.rs  precise_integration.rs
src/components/: AlignPanel.tsx  FfmpegSetup.tsx  ModelSetupDialog.tsx  ProgressRing.tsx  SettingsDialog.tsx
